@@ -55,7 +55,9 @@
      will allow port forwarding by all users except "anoncvs".
      Currently only a very small subset of directives are supported.
      ok djm@
- - (dtucker) [openbsd-compat/xmmap.c] Include <errno.h>.
+ - (dtucker) [loginrec.c openbsd-compat/xmmap.c openbsd-compat/bindresvport.c
+   openbsd-compat/glob.c openbsd-compat/mktemp.c openbsd-compat/port-tun.c
+   openbsd-compat/readpassphrase.c openbsd-compat/strtonum.c] Include <errno.h>.
 
 20060711
  - (dtucker) [configure.ac ssh-keygen.c openbsd-compat/bsd-openpty.c
@@ -4905,4 +4907,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4401 2006/07/12 12:35:51 dtucker Exp $
+$Id: ChangeLog,v 1.4402 2006/07/12 12:40:50 dtucker Exp $
